Update nakor game

--- a/resources/games_contest_2018/nakor_perez/index.html
+++ b/resources/games_contest_2018/nakor_perez/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div id="fb-root"></div>
-
+	<script src="opus.js"></script>
 	<script src="c2runtime.js"></script>
 	<script src="start.js"></script>
 	<script src="register-sw.js"></script>
